# qclang

./: .gitignore  CHANGELOG.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Language_Manefisto.md  NOTICE.md  README.md  READmE.md  SYNTAX.md  Synatx.md
.github/workflows/: release.yaml
compiler/: Cargo.toml  build.rs
compiler/src/: ast.rs  error.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  simulator.rs
compiler/src/Test/: Semantic_test.rs
compiler/src/codegen/: mod.rs  qasm.rs
compiler/src/qir/: analysis.rs  builder.rs  mod.rs  operations.rs  optimizer.rs  types.rs
compiler/src/semantics/: analyzer.rs  errors.rs  mod.rs  ownership_checker.rs  symbols.rs
libs/examples/: Semantic.qc  bell.qasm  bell.qc  final_test.qc  hello.qc  phase1.4.qasm  phase1.4.qc  phase3.1.qasm  phase3.1.qc  phase3.qasm  phase3.qc  quantum.qasm  quantum.qc  semantic_demo.qc  simple_test.qasm  simple_test.qc  test_parser.qasm  test_parser.qc  valid.qasm  valid.qc
runtime/: Cargo.toml
script/: Build.sh  local.txt
scripts/: extract-binaries.sh
tests/: basic.qasm  basic.qc  bell_state.qasm  bell_state.qc  optimization_test.qasm  optimization_test.qc  registers.qasm  registers.qc  semantic_test.rs  structs.qasm  structs.qc  teleport.qasm  teleport.qc  test-cli.rs  test_sim.qasm  test_sim.qc
windows/: README-WINDOWS.md
windows/installer/: install.bat  install.ps1  uninstall.ps1
windows/scripts/: build-windows.ps1  test-install.ps1
