[package]
name = "qclang-compiler"
version = "0.4.1"
edition = "2021"
description = "A quantum systems programming language compiler"
authors = ["QCLang Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Asmodeus14/qclang"
readme = "README.md"
keywords = ["quantum", "compiler", "programming-language", "qasm"]
categories = ["science", "development-tools"]

[[bin]]
name = "qclang"
path = "compiler/src/bin/qclang.rs"

[[bin]]
name = "qclang-test"
path = "compiler/src/main.rs"

[dependencies]
logos = "0.13"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive", "cargo"] }
indicatif = "0.17"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3